Fix the paginatio bottom spacing

--- a/app/assets/stylesheets/css/components/ui/card.css
+++ b/app/assets/stylesheets/css/components/ui/card.css
@@ -31,6 +31,14 @@
   padding: calc(var(--spacing) - 1px);
 }
 
+/* for pagination we need the padding to be 4px */
+/* TODO: maybe we can make the same padding for all the cases */
+.card:has(.card__footer .pagination) {
+  .card__wrapper {
+    @apply p-1;
+  }
+}
+
 /* Card header */
 .card__header {
   @apply flex flex-col items-start self-stretch py-3 px-4;
@@ -70,6 +78,9 @@
 /* Card footer - full width so pagination can span edge to edge */
 .card__footer {
   @apply w-full;
+    .pagination {
+      @apply p-1 pt-0;
+    }
 }
 
 /* Responsive adjustments */
